force-app/main/default/objects/SalesforceLandRegistry__x/SalesforceLandRegistry__x.object-meta.xml
<CustomObject>
    <externalDataSource>Hera_Archive</externalDataSource>
    <externalName>SalesforceLandRegistry</externalName>
    <label>Dato Catastale Salesforce</label>
    <pluralLabel>Dati Catastali Salesforce</pluralLabel>
</CustomObject>