force-app/main/default/objects/SalesforceLandRegistry__x/fields/DestinationUsageC__c.field-meta.xml
<CustomField>
    <fullName>DestinationUsageC__c</fullName>
    <description>DestinationUsageC</description>
    <externalDeveloperName>DestinationUsageC</externalDeveloperName>
    <label>DestinationUsageC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>