force-app/main/default/objects/SalesforceLandRegistry__x/fields/LegalCityC__c.field-meta.xml
<CustomField>
    <fullName>LegalCityC__c</fullName>
    <description>LegalCityC</description>
    <externalDeveloperName>LegalCityC</externalDeveloperName>
    <label>Comune Amministrativo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>