force-app/main/default/objects/SalesforceLandRegistry__x/fields/OfferCodeC__c.field-meta.xml
<CustomField>
    <fullName>OfferCodeC__c</fullName>
    <description>OfferCodeC</description>
    <externalDeveloperName>OfferCodeC</externalDeveloperName>
    <label>OfferCodeC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>