force-app/main/default/objects/SalesforceLandRegistry__x/fields/ParticleTableC__c.field-meta.xml
<CustomField>
    <fullName>ParticleTableC__c</fullName>
    <description>ParticleTableC</description>
    <externalDeveloperName>ParticleTableC</externalDeveloperName>
    <label>Particella Tavolare</label>
    <length>255</length>
    <type>Text</type>
</CustomField>