force-app/main/default/objects/SalesforceLandRegistry__x/fields/ProvinceC__c.field-meta.xml
<CustomField>
    <fullName>ProvinceC__c</fullName>
    <description>ProvinceC</description>
    <externalDeveloperName>ProvinceC</externalDeveloperName>
    <label>Provincia</label>
    <length>255</length>
    <type>Text</type>
</CustomField>