force-app/main/default/objects/SalesforceLandRegistry__x/fields/RegistryCategoryC__c.field-meta.xml
<CustomField>
    <fullName>RegistryCategoryC__c</fullName>
    <description>RegistryCategoryC</description>
    <externalDeveloperName>RegistryCategoryC</externalDeveloperName>
    <label>Categoria Catastale</label>
    <length>255</length>
    <type>Text</type>
</CustomField>