force-app/main/default/objects/SalesforceLandRegistry__x/fields/RegistryCityC__c.field-meta.xml
<CustomField>
    <fullName>RegistryCityC__c</fullName>
    <description>RegistryCityC</description>
    <externalDeveloperName>RegistryCityC</externalDeveloperName>
    <label>RegistryCityC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>