force-app/main/default/objects/SalesforceLandRegistry__x/fields/RegistrySurfaceC__c.field-meta.xml
<CustomField>
    <fullName>RegistrySurfaceC__c</fullName>
    <description>RegistrySurfaceC</description>
    <externalDeveloperName>RegistrySurfaceC</externalDeveloperName>
    <label>RegistrySurfaceC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>