force-app/main/default/objects/SalesforceLandRegistry__x/fields/SAPImplantCodeFormulaC__c.field-meta.xml
<CustomField>
    <fullName>SAPImplantCodeFormulaC__c</fullName>
    <description>SAPImplantCodeFormulaC</description>
    <externalDeveloperName>SAPImplantCodeFormulaC</externalDeveloperName>
    <label>SAPImplantCodeFormulaC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>