force-app/main/default/objects/SalesforceLandRegistry__x/fields/SapProgressiveC__c.field-meta.xml
<CustomField>
    <fullName>SapProgressiveC__c</fullName>
    <description>SapProgressiveC</description>
    <externalDeveloperName>SapProgressiveC</externalDeveloperName>
    <label>Progressivo SAP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>