force-app/main/default/objects/SalesforceLandRegistry__x/fields/ServicePointC__c.field-meta.xml
<CustomField>
    <fullName>ServicePointC__c</fullName>
    <description>ServicePointC</description>
    <externalDeveloperName>ServicePointC</externalDeveloperName>
    <label>Service Point</label>
    <length>255</length>
    <type>Text</type>
</CustomField>