force-app/main/default/objects/SalesforceLandRegistry__x/fields/SheetC__c.field-meta.xml
<CustomField>
    <fullName>SheetC__c</fullName>
    <description>SheetC</description>
    <externalDeveloperName>SheetC</externalDeveloperName>
    <label>SheetC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>