force-app/main/default/objects/SalesforceLandRegistry__x/fields/StartDateC__c.field-meta.xml
<CustomField>
    <fullName>StartDateC__c</fullName>
    <description>StartDateC</description>
    <externalDeveloperName>StartDateC</externalDeveloperName>
    <label>Data Inizio</label>
    <type>DateTime</type>
</CustomField>