force-app/main/default/objects/SalesforceLandRegistry__x/fields/StatusC__c.field-meta.xml
<CustomField>
    <fullName>StatusC__c</fullName>
    <description>StatusC</description>
    <externalDeveloperName>StatusC</externalDeveloperName>
    <label>Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>