force-app/main/default/objects/SalesforceLandRegistry__x/fields/TitleC__c.field-meta.xml
<CustomField>
    <fullName>TitleC__c</fullName>
    <description>TitleC</description>
    <externalDeveloperName>TitleC</externalDeveloperName>
    <label>TitleC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>